2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  [Bug 2446711]: Remove 'allpatch' target.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  Use 'rpmbuild', not 'rpm' [Bug 2537626].

2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:       Cross-compile support for Win and UNIX (backported)
	* unix/configure:    (autoconf-2.59)
	* win/tcl.m4:
	* win/configure.in:
	* win/configure:     (autoconf-2.59)
	* win/tkWin32Dll.c:  SEH-emulation for AMD64
	* win/tkWinX.c:      mingw-w64 does not accept _WIN32_IE < 0x0501

2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4: Better building on OpenBSD.
	* unix/configure: (autoconf-2.59)

2010-11-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug #3071836]: Crash/Tcl_Panic on WinXP saving file to C:\
	* win/tkWinInit.c:   re-wrote TkpDisplayWarning such that it does not use
	an Tcl API calls any more, so it works even with an ill-initialized Tcl.
	* win/winMain.c:     Teach WishPanic how to thread UTF-8 in it's messagebox.
	Both of those changes backported from Tcl 8.6. No change in functionality.

2010-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/configure.in:	    Allow cross-compilation by default. (backported)
	* win/tcl.m4:		    Use -pipe for gcc on win32 (backported)
	* win/configure:        (regenerated)

2010-11-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPort.h  [Bug #3110161]: Extensions using TCHAR don't compile
	on VS2005 SP1

2010-11-04  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/msgs/de.msg:  Updated German messages.  Thanks to Ruediger
        Haertel. [Patch 2442309] [Bug 3102739].

2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc        Update for VS10

2010-10-11  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c: Fix crash in 'tag add' / 'tag remove'
	commands when no -tags specified [Bug 3085489].
